<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/black">

    <TextView
        android:id="@+id/dialog_titile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_title"
        android:padding="5dp"

        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/dialog_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_message"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_below="@id/dialog_titile"
        />

    <Button
        android:id="@+id/dialog_positive_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_cancel"
        android:layout_below="@id/dialog_tv"
        android:layout_alignParentRight="true"
        android:textColor="@color/white"
        android:background="#00000000"
        />
    <Button
        android:id="@+id/dialog_negative_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_delete"
        android:layout_toLeftOf="@id/dialog_positive_btn"
        android:layout_below="@id/dialog_tv"
        android:layout_marginRight="3dp"
        android:textColor="@color/red_text"
        android:background="#00000000"
        />

</RelativeLayout>