<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/activity_email_success_text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="81dp"
        android:text="@string/enter_code"
        android:gravity="center"
        android:textColor="@color/blackText"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/activity_email_success_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="19dp"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/blackText"
        android:text="@string/code_sent_to_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_email_success_text1"/>

    <EditText
        android:id="@+id/activity_email_success_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="98dp"
        android:layout_marginStart="98dp"
        android:background="@drawable/email_success_code_background"
        android:textSize="24sp"
        android:textColor="@color/grayText"
        android:hint="@string/email_code_hint"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/activity_email_success_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/activity_email_success_no_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginEnd="136dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/lightGrayText"
        android:textSize="12sp"
        android:gravity="center"
        android:text="@string/didnt_get_code"
        app:layout_constraintTop_toBottomOf="@id/activity_email_success_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/activity_email_success_wrong_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="97dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="16dp"
        android:textSize="12sp"
        android:textColor="@color/darkGrayText"
        android:text="@string/wrong_mail"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_email_success_no_code"/>

    <TextView
        android:id="@+id/activity_email_success_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="93dp"
        android:background="@drawable/button_background"
        android:textSize="17sp"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/whiteText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>