<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/activity_background">

    <View
        android:id="@+id/activity_role_choice_back"
        android:layout_width="12dp"
        android:layout_height="20dp"
        android:layout_marginTop="23dp"
        android:layout_marginStart="9dp"
        android:background="@drawable/white_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/activity_role_choice_text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="13dp"
        android:textSize="28sp"
        android:text="@string/choose_role"
        android:textColor="@color/whiteText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_role_choice_back"/>

    <TextView
        android:id="@+id/activity_role_choice_text2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/whiteText"
        android:layout_marginTop="8dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="31dp"
        android:textSize="17sp"
        android:text="@string/different_tasks_different_role"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_role_choice_text1"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/role_choice_star_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_role_choice"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_role_choice_text2"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/role_choice_button1_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:textColor="@color/whiteText"
            android:textSize="20sp"
            android:text="@string/star"
            android:layout_marginStart="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="15dp"
            android:textSize="13sp"
            android:text="@string/become_a_star"
            android:textColor="@color/whiteText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/role_choice_button1_text"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/role_choice_producer_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_role_choice"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="23dp"
        android:layout_marginStart="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/role_choice_star_button"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/role_choice_button2_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:textColor="@color/whiteText"
            android:textSize="20sp"
            android:text="@string/producer"
            android:layout_marginStart="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="15dp"
            android:textSize="13sp"
            android:text="@string/feel_urself_producer"
            android:textColor="@color/whiteText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/role_choice_button2_text"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>